--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,21 @@
-@import url('https://fonts.googleapis.com/css?family=Poor+Story');
+/*@import url('https://fonts.googleapis.com/css?family=Poor+Story');*/
+@import url('https://fonts.googleapis.com/css?family=Tajawal:300,400,500,700');
 
 html, body {
     padding: 0;
     margin: 0;
-    font-family: "Poor Story", serif;
+    font-family: "Tajawal", serif;
+    overflow-x: hidden;
+}
+
+a {
+    text-decoration: none;
+    color: #325aa2;
+    font-weight: 600;
+}
+
+a:hover {
+    color: #000;
 }
 
 .page-wrapper {
@@ -16,7 +28,8 @@ html, body {
 }
 
 .logo-wrapper img {
-    max-width: 70px;
+    max-width: 130px;
+    margin-left: -40px;
 }
 
 .menu-list {
@@ -41,7 +54,11 @@ html, body {
 
 .section__header {
     font-size: 2rem;
-    color: #444444;
+    color: #222222;
+}
+
+.section__header:first-child {
+    margin-top: 0;
 }
 
 /*
@@ -71,29 +88,27 @@ html, body {
     /*grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));*/
 }
 
-.project {
-
-}
-
 .project img {
     max-width: 100%;
     position: relative;
-}
-
-.project-info-wrapper {
-
 }
 
 .project__name {
     font-size: 2rem;
     font-weight: 600;
     margin: 10px 0 0 0;
+    color: #2d2d2d;
 }
 
 .project__info__text {
     font-size: 1.3rem;
     font-weight: 500;
     margin-top: 10px;
+    color: #1f1e1e;
+}
+
+.contact__text {
+    font-size: 1.3rem;
 }
 
 @media (max-width: 700px) {
@@ -104,5 +119,13 @@ html, body {
             "three"
             "four"
         ;
+    }
+
+    .page-wrapper {
+        margin: 8% 5%;
+    }
+
+    .about__text {
+        font-size: 1.3rem;
     }
 }
