--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,8 +28,8 @@ a:hover {
 }
 
 .logo-wrapper img {
-    max-width: 130px;
-    margin-left: -10px;
+    max-width: 110px;
+    margin-left: -25px;
 }
 
 .menu-list {
@@ -112,6 +112,10 @@ a:hover {
 }
 
 @media (max-width: 700px) {
+    .logo-wrapper img {
+        max-width: 130px;
+    }
+
     .projects {
         grid-template-areas:
             "one"
@@ -129,3 +133,4 @@ a:hover {
         font-size: 1.3rem;
     }
 }
+
