--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ html, body {
     margin: 0;
     font-family: "Tajawal", serif;
     overflow-x: hidden;
+    /* background: #000; */
 }
 
 a {
@@ -16,6 +17,7 @@ a {
 
 a:hover {
     color: #000;
+    /* color: #fff; */
 }
 
 .page-wrapper {
@@ -55,6 +57,7 @@ a:hover {
 .section__header {
     font-size: 2rem;
     color: #222222;
+    /* color: #fff; */
 }
 
 .section__header:first-child {
@@ -72,6 +75,7 @@ a:hover {
 .about__text {
     font-size: 1.5rem;
     color: #1f1e1e;
+    /* color: #fff; */
 }
 
 /*
@@ -98,6 +102,7 @@ a:hover {
     font-weight: 600;
     margin: 10px 0 0 0;
     color: #2d2d2d;
+    /* color: #fff; */
 }
 
 .project__info__text {
@@ -105,6 +110,7 @@ a:hover {
     font-weight: 500;
     margin-top: 10px;
     color: #1f1e1e;
+    /* color: #fff; */
 }
 
 .contact__text {
@@ -133,4 +139,3 @@ a:hover {
         font-size: 1.3rem;
     }
 }
-
