added night mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,141 +1,275 @@
 /*@import url('https://fonts.googleapis.com/css?family=Poor+Story');*/
 @import url('https://fonts.googleapis.com/css?family=Tajawal:300,400,500,700');
 
+:root {
+	--primary-color: #2d2d2d;
+	--text-color: #1f1e1e;
+	--bg-color: #ffffff;
+	--heading-color: #222222;
+	--link-color: #325aa2;
+	--hover-color: #000000;
+}
+
+[data-theme="dark"] {
+	--primary-color: #ffffff;
+	--text-color: #e1e1ff;
+	--bg-color: #131313;
+	--heading-color: #ffffff;
+	--link-color: #325aa2;
+	--hover-color: #ffc401;
+}
+
 html, body {
-    padding: 0;
-    margin: 0;
-    font-family: "Tajawal", serif;
-    overflow-x: hidden;
-    /* background: #000; */
+	padding: 0;
+	margin: 0;
+	font-family: "Tajawal", serif;
+	overflow-x: hidden;
+	background: var(--bg-color);
 }
 
 a {
-    text-decoration: none;
-    color: #325aa2;
-    font-weight: 600;
+	text-decoration: none;
+	color: var(--link-color);
+	font-weight: 600;
 }
 
 a:hover {
-    color: #000;
-    /* color: #fff; */
+	color: var(--hover-color);
+	/* color: #fff; */
 }
 
 .page-wrapper {
-    margin: 10% 15%;
+	margin: 10% 15%;
 }
 
 #header {
-    display: grid;
-    grid-template-areas: "logo menu";
+	display: grid;
+	grid-template-areas: "logo menu";
 }
 
 .logo-wrapper img {
-    max-width: 110px;
-    margin-left: -25px;
+	max-width: 110px;
+	margin-left: -25px;
 }
 
 .menu-list {
-    display: grid;
-    grid-gap: 0;
-    grid-template-columns: repeat(3, 100px);
-    padding: 0;
-    margin-top: 25px;
-    list-style: none;
-    float: right;
-    /*grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));*/
+	display: grid;
+	grid-gap: 0;
+	grid-template-columns: repeat(3, 100px);
+	padding: 0;
+	margin-top: 25px;
+	list-style: none;
+	float: right;
+	/*grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));*/
 }
 
 .menu-list li {
-    text-align: right;
+	text-align: right;
 }
 
 .menu-list a {
-    text-decoration: none;
-    color: black;
+	text-decoration: none;
+	color: black;
 }
 
 .section__header {
-    font-size: 2rem;
-    color: #222222;
-    /* color: #fff; */
+	font-size: 2rem;
+	color: var(--heading-color);
 }
 
 .section__header:first-child {
-    margin-top: 0;
+	margin-top: 0;
 }
 
 /*
-    #about section
+	#about section
 */
 
 #about {
-    margin-top: 70px;
+	margin-top: 70px;
 }
 
 .about__text {
-    font-size: 1.5rem;
-    color: #1f1e1e;
-    /* color: #fff; */
+	font-size: 1.5rem;
+	color: var(--text-color);
 }
 
 /*
-    #projects section
+	#projects section
 */
 #works {
-    margin-top: 60px;
+	margin-top: 60px;
 }
 
 .projects {
-    display: grid;
-    grid-gap: 10px;
-    grid-template-areas: "one two";
-    /*grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));*/
+	display: grid;
+	grid-gap: 10px;
+	grid-template-areas: "one two";
+	/*grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));*/
 }
 
 .project img {
-    max-width: 100%;
-    position: relative;
+	max-width: 100%;
+	position: relative;
 }
 
 .project__name {
-    font-size: 2rem;
-    font-weight: 600;
-    margin: 10px 0 0 0;
-    color: #2d2d2d;
-    /* color: #fff; */
+	font-size: 2rem;
+	font-weight: 600;
+	margin: 10px 0 0 0;
+	color: var(--primary-color);
 }
 
 .project__info__text {
-    font-size: 1.3rem;
-    font-weight: 500;
-    margin-top: 10px;
-    color: #1f1e1e;
-    /* color: #fff; */
+	font-size: 1.3rem;
+	font-weight: 500;
+	margin-top: 10px;
+	color: var(--text-color);
 }
 
 .contact__text {
-    font-size: 1.3rem;
+	color: var(--text-color);
+	font-size: 1.3rem;
 }
 
 @media (max-width: 700px) {
-    .logo-wrapper img {
-        max-width: 130px;
-    }
+	.logo-wrapper img {
+		max-width: 130px;
+	}
 
-    .projects {
-        grid-template-areas:
-            "one"
-            "two"
-            "three"
-            "four"
-        ;
-    }
+	.projects {
+		grid-template-areas:
+			"one"
+			"two"
+			"three"
+			"four"
+		;
+	}
 
-    .page-wrapper {
-        margin: 8% 5%;
-    }
+	.page-wrapper {
+		margin: 8% 5%;
+	}
 
-    .about__text {
-        font-size: 1.3rem;
-    }
+	.about__text {
+		font-size: 1.3rem;
+	}
+}
+
+/*  */
+.toggle-button {
+	position: fixed;
+	top: 0;
+	right: 0;
+	margin: 25px;
+}
+
+.checkbox {
+	position: relative;
+	display: inline-block;
+}
+
+.checkbox label {
+	width: 90px;
+	height: 42px;
+	background: #ccc;
+	position: relative;
+	display: inline-block;
+	border-radius: 46px;
+	transition: 0.4s;
+}
+
+.checkbox label:after {
+	content: '';
+	position: absolute;
+	width: 50px;
+	height: 50px;
+	border-radius: 100%;
+	left: 0;
+	top: -5px;
+	z-index: 2;
+	background: #fff;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+	transition: 0.4s;
+}
+
+.checkbox input {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 5;
+	opacity: 0;
+	cursor: pointer;
+}
+
+.checkbox input:hover + label:after {
+	box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.2), 0 3px 8px 0 rgba(0, 0, 0, 0.15);
+}
+
+	.checkbox input:checked + label:after {
+	left: 40px;
+}
+
+.toggle-button .checkbox:after {
+	content: 'DARK';
+	font-family: "Tajawal";
+	position: absolute;
+	color: #666;
+	top: 7px;
+	right: 14px;
+	font-size: 17px;
+	font-weight: 900;
+}
+
+.toggle-button .checkbox label {
+	background: none;
+	border: 3px solid #777;
+	height: 35px;
+	border-radius: 20px;
+}
+
+.toggle-button .checkbox label:after {
+	content: 'LIGHT';
+	text-align: center;
+	font-family: "Tajawal";
+	color: #fff;
+	font-weight: 900;
+	line-height: 28px;
+	text-indent: 100px;
+	background: #777;
+	overflow: hidden;
+	box-shadow: none;
+	border-radius: 14px;
+	-webkit-transform: translateX(-50px);
+	transform: translateX(-50px);
+	-moz-transition: all 0.4s 0.2s, width 0.2s linear, text-indent 0.4s linear;
+	-o-transition: all 0.4s 0.2s, width 0.2s linear, text-indent 0.4s linear;
+	-webkit-transition: all 0.4s, width 0.2s linear, text-indent 0.4s linear;
+	-webkit-transition-delay: 0.2s, 0s, 0s;
+	transition: all 0.4s 0.2s, width 0.2s linear, text-indent 0.4s linear;
+	top: 3px;
+	left: auto;
+	right: 5px;
+	width: 28px;
+	height: 28px;
+}
+
+.toggle-button .checkbox input:checked + label {
+	border-color: #ffc401;
+}
+
+.toggle-button .checkbox input:checked + label:after {
+	/* background: #3fb454; */
+	background: #ffc401;
+	left: auto;
+	-webkit-transform: translateX(0px);
+	transform: translateX(0px);
+	-moz-transition: all 0.4s, width 0.2s linear 0.4s, text-indent 0.3s linear 0.4s;
+	-o-transition: all 0.4s, width 0.2s linear 0.4s, text-indent 0.3s linear 0.4s;
+	-webkit-transition: all 0.4s, width 0.2s linear, text-indent 0.3s linear;
+	-webkit-transition-delay: 0s, 0.4s, 0.4s;
+	transition: all 0.4s, width 0.2s linear 0.4s, text-indent 0.3s linear 0.4s;
+	width: 80px;
+	text-indent: 0;
 }
