edit links and change bg color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,9 @@
-/*@import url('https://fonts.googleapis.com/css?family=Poor+Story');*/
 @import url('https://fonts.googleapis.com/css?family=Tajawal:300,400,500,700');
 
 :root {
 	--primary-color: #2d2d2d;
 	--text-color: #1f1e1e;
-	--bg-color: #ffffff;
+	--bg-color: #FAFAFA;
 	--heading-color: #222222;
 	--link-color: #325aa2;
 	--hover-color: #000000;
@@ -12,10 +11,10 @@
 
 [data-theme="dark"] {
 	--primary-color: #ffffff;
-	--text-color: #e1e1ff;
-	--bg-color: #131313;
+	--text-color: #ffffff;
+	--bg-color: #172024;
 	--heading-color: #ffffff;
-	--link-color: #325aa2;
+	--link-color: #57b6fa;
 	--hover-color: #ffc401;
 }
 
@@ -92,6 +91,10 @@ a:hover {
 .about__text {
 	font-size: 1.5rem;
 	color: var(--text-color);
+}
+
+.intern-at {
+    color: #f05924;
 }
 
 /*
